[package]
name = "wot"
version = "0.1.0"
edition = "2021"
authors = ["Valentin Semenov <spbvalek@gmail.com>"]
description = "Plugin for Allure TestOps <https://qameta.io/>. wot - WrapperOverTestops"

[dependencies]
zip = "2.2.2"
directories = "5.0"
regex = "1.0.0"
clap = "4.5.23"
reqwest = { version = "0.12.11", features = ["json", "multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
