[package]
name = "wot"
version = "0.2.5"
edition = "2021"
authors = ["Valentin Semenov <spbvalek@gmail.com>"]
description = "Plugin for Allure TestOps <https://qameta.io/>. wot - WrapperOverTestops"

[dependencies]
zip = "2.2.2"
directories = "5.0"
regex = "1.0.0"
reqwest = { version = "0.12.11", features = ["json", "multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4.39"
uuid = { version = "1.11.1", features = ["v4"] }
thiserror = "2.0.12"

[dev-dependencies]
test-case = "*"
rstest = "0.25.0"
mockito = "1.7.0"
assert_cmd = "2.0.16"
predicates = "3.1.3"

[build-dependencies]
directories = "5.0"
